test/e2e/testdata/.snapshots/TestSetupFailureFlow/Invalid_Project_ID/POST_api_atlas_v2_groups_111111111111111111111111_databaseUsers_1.snaphost
HTTP/2.0 401 Unauthorized
Content-Length: 106
Content-Type: application/json
Date: Fri, 02 Jan 2026 16:55:24 GMT
Server: mdbws
Www-Authenticate: Digest realm="MMS Public API", domain="", nonce="cLvxiVVBOz4gSIo1Zc5MM+Ce5igdDX6O", algorithm=MD5, qop="auth", stale=false
X-Envoy-Upstream-Service-Time: 5

{
  "error" : 401,
  "reason" : "Unauthorized",
  "detail" : "You are not authorized for this resource."
}